--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="./style.css" type="text/css">
 
-    <link rel="shortcut icon" href="/assets/images/favicon.png">
+    <link rel="shortcut icon" href="./assets/images/favicon.png">
     <title>Churrascômetro</title>
 
 </head>
@@ -20,7 +20,7 @@
         </div>
         <div id="inputContainer">
 
-            <img id="logo" src="/assets/images/logoChurrascometro.png" alt="">
+            <img id="logo" src="./assets/images/logoChurrascometro.png" alt="">
 
             <input id="adultos" name="adultos" type="number" min="2" placeholder="Quantidade de Adultos">
 
@@ -28,7 +28,7 @@
     
             <input id="duracao" name="duracao" type="number" min="1" placeholder="Duração em Horas(h)">
 
-            <a onclick="calcular()" href="#resultado"><img id="botaoCalcular" src="/assets/images/botao-calc.png" alt=""></a>
+            <a onclick="calcular()" href="#resultado"><img id="botaoCalcular" src="./assets/images/botao-calc.png" alt=""></a>
         </div>
 
         <div id="blocoNotas">
@@ -48,7 +48,7 @@
                 
             </div>
 
-            <img id="churrasqueiro" src="/assets/images/churrasqueiro.png" alt="">
+            <img id="churrasqueiro" src="./assets/images/churrasqueiro.png" alt="">
         </div>
     </div>
 
@@ -56,7 +56,7 @@
 
     </div>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 </html>
